--- a/src/App.css
+++ b/src/App.css
@@ -2,68 +2,7 @@ body {
     background-color: #111;
     color: #fff;
     font-family: Arial, sans-serif;
-}
-
-.repo-list-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 16px;
-}
-
-.centered-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 16px;
-}
-
-    .centered-text h2 {
-        margin: 0;
-    }
-
-.pill-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-}
-
-.pill {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 8px 16px;
-    border-radius: 50px;
-    background-color: #b20000; /* Rojo */
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease;
-}
-
-    .pill:hover {
-        background-color: #d60000; /* Rojo más claro al pasar el cursor */
-    }
-
-    .pill span {
-        display: inline-block;
-        text-align: center;
-    }
-
-.rotating-svg {
-    animation: rotate 4s linear infinite; /* 4s para una vuelta completa (ajusta el valor según lo desees) */
-    width: 80px; /* Ajusta el tamaño del SVG según tus preferencias */
-    height: 80px; /* Ajusta el tamaño del SVG según tus preferencias */
-    margin-top: 16px; /* Ajusta el margen superior para separar el logo del título */
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(360deg);
-    }
-}
+  }
+  
+  /* Resto de estilos... */
+  
