--- a/src/WhatIHave.css
+++ b/src/WhatIHave.css
@@ -3,7 +3,7 @@
 .what-i-have-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     padding: 20px;
     color: white;
 }
